--- a/M2/02-CSS/homework/responsive-web/less/navigation.less
+++ b/M2/02-CSS/homework/responsive-web/less/navigation.less
@@ -6,6 +6,9 @@
     background: @nav-bg;
     border: 2px solid @nav-border;
     padding: 10px 10px;
+    position: fixed;
+    top: 0;
+    width: 100%;
 
     #tittle {
         font-size: 35px;
