--- a/M2/02-CSS/homework/responsive-web/css/index.css
+++ b/M2/02-CSS/homework/responsive-web/css/index.css
@@ -167,6 +167,9 @@ p {
   background: #F6F6F6;
   border: 2px solid #F1F1F1;
   padding: 10px 10px;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 #header #tittle {
   font-size: 35px;
@@ -212,7 +215,7 @@ footer {
 .home .intro .img-header {
   display: flex;
   align-items: center;
-  padding-top: 10px;
+  margin-top: 100px;
 }
 .home .intro .img-header img {
   border-radius: 20px;
