--- a/M2/02-CSS/homework/responsive-web/less/home-page.less
+++ b/M2/02-CSS/homework/responsive-web/less/home-page.less
@@ -15,7 +15,7 @@
     .img-header {
       display: flex;
       align-items: center;
-      padding-top: 10px;
+      margin-top: 100px;
       img {
         border-radius: 20px;
       }
