--- a/M2/06-React-Intro/homework/src/App.css
+++ b/M2/06-React-Intro/homework/src/App.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  background-color: #A5C9CA;
+  height: 100vh;
 }
 
 .App-logo {
